[package]
name = "db-restore"
version = "0.1.0"
description = "A mysql db restore tool"
authors = ["ruizhaozheng@outlook.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx= {version="0.5.13",features= ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
simple-log = "1.5.1"
tar = "0.4.38"
flate2 = "1.0.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
